fix tables on mobile

--- a/src/styles/scss/_shared.scss
+++ b/src/styles/scss/_shared.scss
@@ -31,6 +31,7 @@ body {
 	pre {
 		background-color: var(--color);
 		padding: 10px;
+		white-space: pre-wrap;
 
 		code {
 			padding: 0;
@@ -46,7 +47,6 @@ body {
 
 @mixin mainColumn () {
 	align-self: flex-start;
-	justify-self: flex-start;
 	grid-area: 4 / 2 / auto / 4;
 	max-width: 650px;
 
